=encoding UTF-8

=head1 NAME

Changes - Revision history for Module-CPANTS-Analyse

=head2 0.91 2013-09-05

=over

=item Fixed RT#69233 - doesn't detect use >= 5.012 as use strict (ishigaki)

=item Fixed RT#83336 - Fails to detect strict via `use MooseX::Types` (ether)

=item Fixed RT#83851 - 'use v5.16' and greater not deemed "strict" (ishigaki)

=item Fixed RT#86504 - fix sort order of Kwalitee generators (ether)

=item Fixed RT#87155 - more Module::Install tests needed (1.04 is broken) (ishigaki)

=item Fixed RT#87597 - proper_libs is a dubious test (ishigaki)

=item Fixed RT#87598 - Can't use an undefined value as an ARRAY reference at .../FindModules.pm line 115. (ishigaki)

=item Fixed RT#87988 - Fix use of $Test::Kwalitee::VERSION (ether)

=item Fixed RT#88216 - extracts_nicely metric fails for -TRIAL releases (ishigaki)

=item Fixed RT#88365 - YAML/JSON tests are not failing when improperly encoded characters are seen (ishigaki)

=item Moose::Exporter also provides strict and warnings (doy)

=back

=head2 0.90_02 2013-08-03

=over

=item Fixed L<rt#87535|https://rt.cpan.org/Ticket/Display.html?id=87535> - incorrect version specification in 0.90_01 (L<ether|https://metacpan.org/author/ether>)

=item Fixed L<rt#87534|https://rt.cpan.org/Ticket/Display.html?id=87534> - Test failure in 0.90_01 (L<ether|https://metacpan.org/author/ether>)

=item Fixed L<rt#87561|https://rt.cpan.org/Ticket/Display.html?id=87561> - t/11_hash_random.t fails due to undeclared test dependency (L<wyant|https://metacpan.org/author/wyant>)

=back

=head2 0.90_01 2013-08-01

=over

=item Applied all the changes in 0.88 again, and removed a few non-portable metrics for Test::Kwalitee.

=back

=head2 0.89 2013-08-01

=over

=item Tentatively reverted all the changes in 0.88

=back

=head2 0.88 2013-08-01

=over

=item add metric C<no_dot_underscore_files>
(L<daxim|https://metacpan.org/author/daxim>,
L<charsbar|https://metacpan.org/author/ishigaki>)
