@@ -4,7 +4,7 @@
       "Lars Dɪᴇᴄᴋᴏᴡ <daxim@cpan.org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "Module::Build version 0.4005, CPAN::Meta::Converter version 2.132140",
+   "generated_by" : "Module::Build version 0.4007, CPAN::Meta::Converter version 2.132620",
    "keywords" : [
       "CPANTS",
       "kwalitee"
@@ -57,75 +57,75 @@
    "provides" : {
       "Module::CPANTS::Analyse" : {
          "file" : "lib/Module/CPANTS/Analyse.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee" : {
          "file" : "lib/Module/CPANTS/Kwalitee.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::BrokenInstaller" : {
          "file" : "lib/Module/CPANTS/Kwalitee/BrokenInstaller.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::CpantsErrors" : {
          "file" : "lib/Module/CPANTS/Kwalitee/CpantsErrors.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Distname" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Distname.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Distros" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Distros.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Files" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Files.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::FindModules" : {
          "file" : "lib/Module/CPANTS/Kwalitee/FindModules.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::License" : {
          "file" : "lib/Module/CPANTS/Kwalitee/License.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Manifest" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Manifest.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::MetaYML" : {
          "file" : "lib/Module/CPANTS/Kwalitee/MetaYML.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::NeedsCompiler" : {
          "file" : "lib/Module/CPANTS/Kwalitee/NeedsCompiler.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Pod" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Pod.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Prereq" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Prereq.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Repackageable" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Repackageable.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Signature" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Signature.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Uses" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Uses.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       },
       "Module::CPANTS::Kwalitee::Version" : {
          "file" : "lib/Module/CPANTS/Kwalitee/Version.pm",
-         "version" : "0.91"
+         "version" : "0.92"
       }
    },
    "release_status" : "stable",
@@ -141,5 +141,5 @@
          "url" : "https://github.com/cpants/Module-CPANTS-Analyse"
       }
    },
-   "version" : "0.91"
+   "version" : "0.92"
 }
