@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.4005
+# Note: this file was auto-generated by Module::Build::Compat version 0.4007
 require 5.006;
 use ExtUtils::MakeMaker;
 WriteMakefile
